<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <!--Line 1-->
    <RelativeLayout
        android:id="@+id/page2_cell1"
        android:layout_width="171dp"
        android:layout_height="171dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="6dp"
        android:gravity="center"
        android:tag="@string/wechat"
        android:background="@drawable/bg_page2_cell1">
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/page2_cell2"
        android:layout_width="171dp"
        android:layout_height="171dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="6dp"
        android:layout_toRightOf="@id/page2_cell1"
        android:gravity="center"
        android:tag="@string/dial"
        android:background="@drawable/bg_page2_cell2">
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/page2_cell3"
        android:layout_width="171dp"
        android:layout_height="171dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="6dp"
        android:layout_toRightOf="@id/page2_cell2"
        android:gravity="center"
        android:tag="@string/search_song"
        android:background="@drawable/bg_page2_cell3">
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/page2_cell4"
        android:layout_width="96dp"
        android:layout_height="171dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="6dp"
        android:layout_toRightOf="@id/page2_cell3"
        android:gravity="center"
        android:tag="@string/radio_settings"
        android:background="@drawable/bg_page2_cell4">
    </RelativeLayout>

    <!--Line 2-->
    <RelativeLayout
        android:id="@+id/page2_cell5"
        android:layout_width="171dp"
        android:layout_height="171dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="6dp"
        android:layout_below="@id/page2_cell1"
        android:gravity="center"
        android:tag="@string/obd"
        android:background="@drawable/bg_page2_cell5">
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/page2_cell6"
        android:layout_width="96dp"
        android:layout_height="171dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="6dp"
        android:layout_toRightOf="@id/page2_cell5"
        android:layout_below="@id/page2_cell1"
        android:gravity="center"
        android:tag="@string/navgation2"
        android:background="@drawable/bg_page2_cell6">
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/page2_cell7"
        android:layout_width="171dp"
        android:layout_height="171dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="6dp"
        android:layout_toRightOf="@id/page2_cell6"
        android:layout_below="@id/page2_cell1"
        android:gravity="center"
        android:tag="@string/self_driving"
        android:background="@drawable/bg_page2_cell7">
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/page2_cell8"
        android:layout_width="171dp"
        android:layout_height="171dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="6dp"
        android:layout_toRightOf="@id/page2_cell7"
        android:layout_below="@id/page2_cell1"
        android:gravity="center"
        android:tag="@string/settings"
        android:background="@drawable/bg_page2_cell8">
    </RelativeLayout>
</RelativeLayout>
